# chaos-c

./: .gitignore  CMakeLists.txt  README.md
include/: logistic_map.h  standard.h
src/: logistic_map.c  main.c  standard.c
